0-reserve/mongodb/k8s/ingress-route.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroutetcp-mongodb
  namespace: mongodb
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-mongodb
  routes:
  # Match is the rule corresponding to an underlying router.
  - match: HostSNI(`mongodb.env0.luojm.com`)
    services:
    - name: mongodb-svc
      port: 27017
